# gba-test

./: .gitignore  COPYRIGHT  Cargo.toml  Xargo.toml  build.rs  build_debug.sh  build_release.sh  clippy.sh  gba.LD
asm_src/: data.S  init.S  irq.S  memcpy.S  util.S
c_inc/: errno.h  fcntl.h  stdio.h  stdlib.h  string.h
data/img/: gba_yeen.img
doc/: .fs.txt.swp  fs.txt
py/: create_fs.py  makerom.py  mode_3_img_conv.py
src/: debug_print.rs  fast_mem.rs  file.rs  lib.rs  lock.rs  once.rs  video.rs  volatile.rs
src/c_support/: mem_support.rs  mod.rs
src/util/: bititer.rs  mod.rs
src/video/: bititer.rs  mod.rs
